eicb-p1/src/test/testcases/errors/p1_public/task_2/arith_err_1.syn.mavl
function void main() {
	switch (2 << ) {}
}